examples/test/testpolicy9143.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9143
  namespace: namespace334
spec:
  podSelector:
    matchLabels:
      key47: value8
      key4: value16
      key3: value42
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key29: value32
      podSelector:
        matchLabels:
          key46: value3
          key34: value8
          key26: value15
